--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -54,8 +56,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-cli": "^3.3.11",
-    "html-webpack-plugin": "^4.3.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
