--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fso-pokedex-2023" 
           heroku_email: "kevintang1118@outlook.com"
+          healthcheck: "https://fso-pokedex-2023.herokuapp.com/health"
+          checkstring: "ok"
