--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,7 @@ jobs:
           heroku_email: "kevintang1118@outlook.com"
           healthcheck: "https://fso-pokedex-2023-be2612fa5114.herokuapp.com/health"
           checkstring: "ok" #test
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
