--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  standard_pipeline:
+  simple_deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -40,7 +40,12 @@ jobs:
           heroku_email: "kevintang1118@outlook.com"
           healthcheck: "https://fso-pokedex-2023-be2612fa5114.herokuapp.com/health"
           checkstring: "ok" #test
+  tag_release:
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
       - name: Bump version and push tag
+        if: ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.67.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
