--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,13 +55,13 @@ jobs:
         if: success()
         with:
           severity: info
-          details: Test Succeeded!
+          details: Deployment succeeded!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Notify Failure
         uses: rjstone/discord-webhook-notify@v1.0.4
         if: failure()
         with:
           severity: error
-          details: Test Failed!
+          details: Commits ${{ join(toJson(github.event.commits.*.message)) }} failed to deploy!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
