--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
         if: failure()
         with:
           severity: error
-          details: Commits ${{ join(toJson(github.event.commits.*.message)) }} failed to deploy!
+          details: Commits ${{ join(toJson(github.event.commits.*.id)) }} failed to deploy!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   tag_release:
     needs: [simple_deployment_pipeline]
